--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "vue-materialize",
   "version": "0.1.0",
   "description": "A lightweight vueJS wrapper for materialize library",
-  "main": "src/vue-materialize.js",
+  "main": "src/js/vue-materialize.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod": "webpack --mode=production",
+    "dev": "webpack --mode=development",
+    "watch": "webpack --mode=development --watch"
   },
   "repository": {
     "type": "git",
@@ -20,7 +23,19 @@
     "url": "https://github.com/takaworx/vue-materialize/issues"
   },
   "homepage": "https://github.com/takaworx/vue-materialize#readme",
-  "devDependencies": {
+  "dependencies": {
     "materialize-css": "^1.0.0-rc.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0"
   }
 }
