--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-materialize",
+  "name": "materialize-extended",
   "version": "0.1.0",
   "description": "A lightweight vueJS wrapper for materialize library",
   "main": "src/js/materialize-extended.js",
